Release 0.3.4
- Remove questionable "use lib '.'" from test suite

Release 0.3.3
- Add coercements for Catalog EmbeddedFile name-tree/
- Fix warning on load of EmbeddedFile objects
- Filespec and Annotation adjustments for PDF::API6 0.1.3

Release 0.3.2
- Fix PDF::Border /S (border-style entry)

Release 0.3.1
- Fix StructElem coercement (broken in 0.3.0)
- Fix PDF::Field .type() method to return 'Field', for
  consistancy, and .subtype() to return the field type.

Release 0.3.0
- Fixed pdf-toc.p6
- Feedback from trial integration PDF::ISO_32000 package
  (work in progress)

Release 0.2.9
- Script fixes:
  -- pdf-burst.p6 to work with inherited page resources. added
     --batch-size option for multi-page bursts
  -- fixed pdf-revert.p6, pdf-info.p6 to not be confused by
     hybrid xrefs
  -- minor improvements to: pdf-append.p6, pdf-content-dump.p6,
     pdf-toc.p6

Release 0.2.8
- Added PDF::Outline(s) .kids iterator and .add-kid method

Release 0.2.7
- Created PDF::Class::Util - with support functions page numbering schemes and PDF page labels.
  Including Roman and Decimal.
- Added page-label printing to pdf-toc.p6
- Added pdf-content-dump.p6

Release 0.2.6
- added pdf-toc.p6 (table-of-contents) utility
- further pdf-checker.p6 improvements:
  --trace option now displays encoded hex and text-strings as Perl strings

Release 0.2.5
- Added PDF::Filespec, PDF::Action::Launch
- pdf-checker.p6 improvements

Release 0.2.4
- Added PDF::Annot::Markup, PDF::Annot::Popup,
  PDF:::Annot::ThreeD, PDF::Markup::Markup3D

Release 0.2.3
- Fix PDF 1.6+ Cross Reference Streams, broken in 0.2.2

Release 0.2.2
- Fix PDF::Shading::Function
- Added PDF::ICCProfile, PDF::Annot::Caret, PDF::Signature,
  PDF::Action::JavaScript

Release 0.2.1
- Added PDF::Action::GoToR - goto remote
- Added PDF::Action::Named - named action
- Added PDF::Image. Use for PDF::Page.Thumb(thumbnail-image) attribute
- Changed PDF::FontDescriptor from a class to a role