@@ -131,5 +131,5 @@
     "pdf"
   ],
   "test-depends" : [ ],
-  "version" : "0.3.4"
+  "version" : "0.3.5"
 }
